// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AssistantResultsPage route snapshots route snapshot cosmetic 1`] = `
Object {
  "categoryChip": "Cosmetic",
  "hasHeadsUp": false,
  "hasNycRegion": false,
  "hasWorksForYou": true,
  "route": "cosmetic",
  "tileHeading": "◫Ingredients & Formulation",
}
`;

exports[`AssistantResultsPage route snapshots route snapshot food 1`] = `
Object {
  "categoryChip": "Food & beverage",
  "hasHeadsUp": false,
  "hasNycRegion": false,
  "hasWorksForYou": false,
  "route": "food",
  "tileHeading": "◫Ingredients",
}
`;

exports[`AssistantResultsPage route snapshots route snapshot supplement 1`] = `
Object {
  "categoryChip": "Supplement",
  "hasHeadsUp": false,
  "hasNycRegion": false,
  "hasWorksForYou": false,
  "route": "supplement",
  "tileHeading": "◫Ingredients",
}
`;

exports[`AssistantResultsPage route snapshots route snapshot unknown 1`] = `
Object {
  "categoryChip": "Cosmetic",
  "hasHeadsUp": false,
  "hasNycRegion": false,
  "hasWorksForYou": false,
  "route": "unknown",
  "tileHeading": "◫Ingredients & Formulation",
}
`;
